# kk-ai

./: CMakeLists.txt  LICENSE  README.md
3rd/ZLToolKit/tests/: test_ringBuffer.cpp
analyse/: object_detect.cc  object_detect.h
custom/cv186ah/: analyse.cc  analyse.h  bm_cv.cc  bm_cv.h  bm_yolov5.cc  bm_yolov5.h  decode.cc  decode.h
decode/: video_decode.cc  video_decode.h
demo/: yolov5_stream.cc
include/hardware/sophon-v5/ffmpeg/libavutil/: ffversion.h
include/hardware/sophon-v5/libsophon/include/: bmdef.h
include/hardware/sophon-v5/opencv2/: cvconfig.h  opencv_modules.hpp
src/sophon-v5/yolov5/: yolov5.cpp
src/sophon-v5/yolov8/: bm_wrapper.hpp  ff_decode.cpp  ff_decode.hpp  ff_video_encode.cpp  ff_video_encode.h  main.cpp  yolov8_det.cpp  yolov8_det.hpp
test/: yolov5_stream.cc
